--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "yarn watch & parcel index.html",
+    "dev": "parcel index.html",
+    "dev-reason": "yarn watch & parcel index.html",
     "watch": "bsb -make-world -w"
   },
   "devDependencies": {
@@ -9,10 +10,15 @@
     "parcel-bundler": "^1.5.1"
   },
   "dependencies": {
+    "@matthamlin/resp": "^2.0.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
+    "emotion": "^8.0.12",
+    "normalize.css": "7.0.0",
+    "react-emotion": "^8.0.12",
+    "react-router-dom": "^4.2.2",
     "reason-react": "^0.3.1"
   }
 }
