Markdown imports work, need to transform probably with preval

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "mhme-parcel",
+  "version": "0.0.0",
   "scripts": {
     "dev": "parcel index.html",
     "dev-reason": "yarn watch & parcel index.html",
