--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   "devDependencies": {
     "bs-platform": "^2.1.0",
     "bsb-js": "^1.0.2",
-    "parcel-bundler": "^1.5.1"
+    "parcel-bundler": "^1.5.1",
+    "parcel-plugin-markdown": "0.2.1"
   },
   "dependencies": {
     "@matthamlin/resp": "^2.0.0",
+    "babel-plugin-macros": "2.1.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "emotion": "^8.0.12",
+    "markdown-to-jsx": "6.4.1",
+    "marked": "0.3.12",
     "normalize.css": "7.0.0",
+    "preval.macro": "1.0.2",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
     "reason-react": "^0.3.1"
