--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "date-fns": "^1.29.0",
     "emotion": "^8.0.12",
     "markdown-to-jsx": "6.4.1",
     "marked": "0.3.12",
     "normalize.css": "7.0.0",
     "preval.macro": "1.0.2",
     "prop-types": "15.6.0",
+    "react": "^16.3.0-alpha.0",
+    "react-dom": "^16.3.0-alpha.0",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
     "reason-react": "^0.3.1"
