--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@atlaskit/avatar": "9.0.0",
+    "@compositor/markdown": "^0.0.21",
     "@matthamlin/react-error-boundary": "^1.0.0",
     "@matthamlin/resp": "^2.0.0",
     "babel-plugin-macros": "2.1.0",
