--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.3.0-alpha.0",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "2.2.1",
     "reason-react": "^0.3.1",
     "remark": "^9.0.0",
     "remark-react": "^4.0.1"
