--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "normalize.css": "7.0.0",
     "preval.macro": "1.0.2",
     "prop-types": "15.6.0",
-    "react": "^16.3.0-alpha.0",
-    "react-dom": "^16.3.0-alpha.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "2.2.1",
