--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "serve"
   },
   "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "bs-platform": "^2.1.0",
     "bsb-js": "^1.0.2",
     "parcel-bundler": "^1.5.1",
@@ -23,12 +24,15 @@
     "babel-plugin-macros": "2.1.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "date-fns": "^1.29.0",
     "emotion": "^8.0.12",
+    "grid-styled": "^3.2.1",
+    "highlight.js": "^9.12.0",
     "markdown-to-jsx": "6.4.1",
     "marked": "0.3.12",
     "normalize.css": "7.0.0",
@@ -38,6 +42,7 @@
     "react-dom": "^16.3.0",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
+    "react-state-reducer": "1.2.3",
     "react-transition-group": "2.2.1",
     "reason-react": "^0.3.1",
     "remark": "^9.0.0",
