--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dev": "parcel ./src/index.html",
     "dev-reason": "yarn watch & parcel ./src/index.html",
     "watch": "bsb -make-world -w",
-    "make": "parcel build ./src/index.html --out-dir build && cp ./build/index.html ./index.html",
+    "make":
+      "parcel build ./src/index.html --out-dir build && cp ./build/index.html ./index.html",
     "deploy": "now",
-    "start": "serve"
+    "start": "serve -s"
   },
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
