--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "dev": "parcel ./src/index.html",
     "dev-reason": "yarn watch & parcel ./src/index.html",
     "watch": "bsb -make-world -w",
-    "make": "parcel build ./src/index.html --out-dir build && cp ./build/index.html ./index.html",
+    "make": "parcel build ./src/index.html --out-dir build",
     "deploy": "now",
-    "start": "serve -s"
+    "start": "serve ./build/ -s"
   },
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
@@ -33,7 +33,7 @@
     "grid-styled": "^3.2.1",
     "highlight.js": "^9.12.0",
     "markdown-to-jsx": "6.4.1",
-    "marked": "0.3.12",
+    "marked": "^0.3.19",
     "normalize.css": "7.0.0",
     "preval.macro": "1.0.2",
     "prop-types": "15.6.0",
@@ -44,8 +44,12 @@
     "react-state-reducer": "1.2.3",
     "react-transition-group": "2.2.1",
     "reason-react": "^0.3.1",
+    "rehype-raw": "^2.0.0",
+    "rehype-stringify": "^3.0.0",
     "remark": "^9.0.0",
+    "remark-parse": "^5.0.0",
     "remark-react": "^4.0.1",
+    "remark-rehype": "^3.0.0",
     "serve": "6.5.3"
   }
 }
