--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-2": "6.24.1",
     "date-fns": "^1.29.0",
     "emotion": "^8.0.12",
+    "grid-emotion": "^3.2.0",
     "grid-styled": "^3.2.1",
     "highlight.js": "^9.12.0",
     "marked": "^0.3.19",
@@ -41,6 +42,7 @@
     "react-state-reducer": "1.2.3",
     "react-transition-group": "2.2.1",
     "reason-react": "^0.3.1",
+    "recycles": "^1.1.0",
     "serve": "6.5.3"
   }
 }
