--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mhme-parcel",
   "version": "0.0.0",
+  "now": {
+    "alias": "matthamlin.me"
+  },
   "scripts": {
     "dev": "parcel ./src/index.html",
     "dev-reason": "yarn watch & parcel ./src/index.html",
@@ -10,7 +13,14 @@
     "start": "serve ./build/ -s"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "bs-platform": "^2.1.0",
     "bsb-js": "^1.0.2",
     "parcel-bundler": "1.7.0"
@@ -20,21 +30,10 @@
     "@compositor/markdown": "^0.0.21",
     "@matthamlin/react-error-boundary": "^1.0.0",
     "@matthamlin/resp": "^2.0.0",
-    "babel-plugin-macros": "2.1.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
     "date-fns": "^1.29.0",
     "emotion": "^8.0.12",
     "grid-emotion": "^3.2.0",
-    "grid-styled": "^3.2.1",
-    "highlight.js": "^9.12.0",
     "marked": "^0.3.19",
-    "normalize.css": "7.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-emotion": "^8.0.12",
