--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["env", "react"],
-  "plugins": ["macros", "transform-class-properties", "transform-object-rest-spread"]
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread"
+  ]
 }
