--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "bs-platform": "^2.1.0",
     "bsb-js": "^1.0.2",
-    "parcel-bundler": "1.7.0"
+    "parcel-bundler": "1.8.1"
   },
   "dependencies": {
     "@atlaskit/avatar": "9.0.0",
@@ -33,9 +33,11 @@
     "date-fns": "^1.29.0",
     "emotion": "^8.0.12",
     "grid-emotion": "^3.2.0",
+    "highlight.js": "9.12.0",
     "marked": "^0.3.19",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "normalize.css": "8.0.0",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
     "react-state-reducer": "1.2.3",
