--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "serve ./build/ -s"
   },
   "devDependencies": {
+    "@matthamlin/parcel-plugin-mdx": "1.1.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -23,20 +24,21 @@
     "babel-preset-stage-2": "6.24.1",
     "bs-platform": "^2.1.0",
     "bsb-js": "^1.0.2",
-    "parcel-bundler": "1.8.0"
+    "parcel-bundler": "1.9.0"
   },
   "dependencies": {
     "@atlaskit/avatar": "9.0.0",
     "@compositor/markdown": "^0.0.21",
     "@matthamlin/react-error-boundary": "^1.0.0",
     "@matthamlin/resp": "^2.0.0",
+    "@mdx-js/tag": "0.11.0",
     "date-fns": "^1.29.0",
     "emotion": "^8.0.12",
     "grid-emotion": "^3.2.0",
     "highlight.js": "9.12.0",
     "marked": "^0.3.19",
     "normalize.css": "8.0.0",
-    "react": "16.4.0",
+    "react": "^0.14.x || ^15.x || ^16.x",
     "react-dom": "16.4.0",
     "react-emotion": "^8.0.12",
     "react-router-dom": "^4.2.2",
@@ -44,6 +46,7 @@
     "react-transition-group": "2.2.1",
     "reason-react": "^0.3.1",
     "recycles": "^1.1.0",
+    "remark-highlight.js": "5.0.0",
     "serve": "6.5.3"
   }
 }
