Fix date formatting

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "dev-reason": "yarn watch & parcel ./src/index.html",
     "watch": "bsb -make-world -w",
     "make": "parcel build ./src/index.html --out-dir build",
-    "predeploy": "yarn make",
     "deploy": "now",
-    "start": "serve ./build/ -s"
+    "start": "serve ./site/ -s"
   },
   "devDependencies": {
     "@matthamlin/parcel-plugin-mdx": "1.1.0",
