Build with new date formatting

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev-reason": "yarn watch & parcel ./src/index.html",
     "watch": "bsb -make-world -w",
     "make": "parcel build ./src/index.html --out-dir build",
+    "postmake": "cp -a ./build/. ./site/",
     "deploy": "now",
     "start": "serve ./site/ -s"
   },
