Add back react-emotion dep thats needed as a peer dep of grid-emotion

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "normalize.css": "8.0.0",
     "react": "16.7.0-alpha.0",
     "react-dom": "16.7.0-alpha.0",
-    "react-router-dom": "^4.4.0-beta.6",
+    "react-emotion": "9.2.12",
     "react-state-reducer": "1.4.0",
     "react-transition-group": "2.5.0",
     "reason-react": "^0.3.1",
